--- a/WADWolfram/src/main/resources/templates/pay.html
+++ b/WADWolfram/src/main/resources/templates/pay.html
@@ -50,7 +50,7 @@
 
                             <li class="dropdown">
                                 <a class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
-                               <!--  <ul class="dropdown-menu">
+                                <!--  <ul class="dropdown-menu">
                                     <li><a href="/register">Únete</a></li>
                                     <li><a href="/login">Inicia sesión/ Mi cuenta</a></li>
                                 </ul>  -->
@@ -65,15 +65,15 @@
                         <div class="col-md-12">
                             <ul class="breadcrumb">
                                 <li><a><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-                                <li >Proyectos</li>
+                                <li>Proyectos</li>
                                 <li>Proyecto</li>
                                 <li>Donación</li>
                             </ul>
-                            
+
                             <ul class="breadcrumb" style="float:right;">
-                            	<li><a href="/projects">Salir</a></li>
+                                <li><a href="/projects">Salir</a></li>
                             </ul>
-                           
+
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                    <img src="/pagar.jpg">
+                        <img src="/pagar.jpg">
                         <form method="post" action="/pay/projects?projectId={{projectId}}">
                             <div id="data">
                                 {{#User}}
@@ -144,12 +144,12 @@
                                 </div>
 
                                 <button type="submit" class="btn btn-primary btn-lg"><a href="#" data-toggle="modal" data-target="#t_and_c_m">Realizar Pago</a></button>
-                            </div>                            
+                            </div>
                         </form>
                     </div>
                 </div>
-                 <!-- Modal -->
-                <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <!-- Modal -->
+                <!--<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -165,11 +165,11 @@
                                 <button type="button" class="btn btn-primary"><a href="/login">Entendido</a></button>
                             </div>
                         </div>
-                        <!-- /.modal-content -->
+                         /.modal-content 
                          </form>
                     </div>
                     <!-- /.modal-dialog -->
-                </div>
+                <!--</div>-->
                 <!-- /.modal -->
             </div>
         </section>
