--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="col-xs-12 col-md-6">¿Todavía no tienes una cuenta? <a href="/register">Únete ya</a></div>
                             </div>
-
+						<input type="hidden" name="_csrf" value="{{token}}" >
                         </form>
                         <!-- Modal -->
                         <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -147,6 +147,7 @@
                                     <div class="modal-footer">
                                         <form action="qai.karen@gmail.com" method="post">
                                             <button type="button" class="btn btn-primary"><a href="/error">Entendido</a></button>
+                                        <input type="hidden" name="_csrf" value="{{token}}" >
                                         </form>
                                     </div>
                                 </div>
