--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -67,7 +67,7 @@
                                 <ul class="dropdown-menu">
                                     <li> 
                                     	<form action="/user/close" method="post">
-                                    	<input type="submit" class="btn btn-info" value="Cerrar sesión" />  
+                                    	<input type="submit" id="boton_nuevo_cs" class="btn" value="Cerrar sesión" />  
                                     	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
                                     	</form>
                                     </li>                                    
@@ -195,11 +195,11 @@
                                                 </div>
 
                                                 <div class="form-group">
-                                                    <label for="exampleInputPassword1">Antigua Contraseña</label>
+                                                    <label for="exampleInputPassword1">Contraseña Actual</label>
                                                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" name="oldPassword" required>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label for="exampleInputPassword1">Nueva Contraseña</label>
+                                                    <label for="exampleInputPassword1">Contraseña Nueva</label>
                                                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña nueva" name="newPassword" >
                                                 </div>
 
