--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/index.html
@@ -15,7 +15,7 @@
 <!-- styles -->
 <link href="/Bootstrap-Admin-Theme/css/styles.css" rel="stylesheet">
 <link href="/Bootstrap-Admin-Theme/css/stats.css" rel="stylesheet">
-
+<link href="/css/admin.css" rel="stylesheet" />
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,9 +44,16 @@
 							<li class="dropdown"><a href="#" class="dropdown-toggle"
 								data-toggle="dropdown">Mi cuenta <b class="caret"></b></a>
 								<ul class="dropdown-menu animated fadeInUp">
-									<li><a href="/admin/Profile">Perfil</a></li>
-									<li><a href="/user/close">Cerrar sesión</a></li>
-								</ul></li>
+									<li><a href="/admin/Profile" id="boton_nuevo_cs" class="btn">Perfil</a></li>
+									<li><a>
+									<form action="/user/close" method="post">
+                                    	<input type="submit" id="boton_nuevo_cs" class="btn" value="Cerrar sesión" />  
+                                    	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
+                                    	</form>
+                                    	</a>
+									</li>
+								</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -73,8 +80,13 @@
 								class="caret pull-right "></span>
 						</a> <!-- Sub menu -->
 							<ul>
-								<li><a href="/admin/Profile">Perfil</a></li>
-								<li><a href="/user/close">Cerrar sesión</a></li>
+								<li><a href="/admin/Profile" style="background-color: white" class="btn">Perfil</a></li>
+								<li><a>
+									<form action="/user/close" method="post">
+                                    	<input type="submit" style="background-color: white" class="btn" value="Cerrar sesión" />  
+                                    	<input type="hidden" name="_csrf" value="{{token}}"/>                                  
+                                    	</form>
+                                    	</a></li>
 							</ul></li>
 					</ul>
 				</div>
